plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.2'
}

sourceCompatibility = '23'
targetCompatibility = '23'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'org.example.socialnetworkjavafx'
  mainClass = 'org.example.socialnetworkjavafx.HelloApplication'
  applicationDefaultJvmArgs = [
          '--module-path', 'C:\\Files\\JavaFx\\javafx-sdk-23.0.1\\lib',
          '--add-modules', 'javafx.controls,javafx.fxml,java.sql'
  ]
}

javafx {
  version = '23'
  modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
  implementation('org.postgresql:postgresql:42.7.2')
  implementation('org.openjfx:javafx-controls:23.0.1')
  implementation('org.openjfx:javafx-fxml:23.0.1')
}

test {
useJUnitPlatform()}

task runWithModules(type: JavaExec) {
  main = 'org.example.socialnetworkjavafx.HelloApplication'
  classpath = sourceSets.main.runtimeClasspath
  jvmArgs = [
          '--module-path', 'C:\\Files\\JavaFx\\javafx-sdk-23.0.1\\lib',
          '--add-modules', 'javafx.controls,javafx.fxml,java.sql',
  ]
}



jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
  launcher {
    name = 'app'
  }
}

jlinkZip {
  group = 'distribution'
}